# smythe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  Readme.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release-checklist.md
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: README.md  artifact_records.py  harness.py  image_benchmarks.md  judge.py  run_asset_suite.py  run_benchmarks.py  run_framework_h2h.py  run_image_benchmarks.py  run_judge_variance.py  run_memory_ab.py  run_optimizer.py
benchmarks/brands/: metacortex.json  osiris.json
benchmarks/results/: asset_suite.json  asset_suite_metacortex_datacentres.json  asset_suite_offline.json  framework_h2h.json  image_aspect_ratio.json  image_k25_ceiling.json  image_k_sweep.json  image_k_sweep_offline.json  judge_variance.json  memory_ab.json  offline_sample.json  optimizer_best_config.json  optimizer_journal.jsonl  real_run.json  v2_acqd.json  v2_codereview.json  v2_compan.json  v2_launch.json  v2_memo.json  v3_acqd.json  v3_codereview.json  v3_compan.json  v3_launch.json  v3_memo.json  v4_acqd.json  v4_codereview.json  v4_compan.json  v4_launch.json  v4_memo.json  v5_acqd.json  v5_codereview.json  v5_compan.json  v5_launch.json  v5_memo.json
benchmarks/tasks/: acquisition_diligence.yaml  code_review.yaml  competitive_analysis.yaml  product_launch.yaml  research_memo.yaml
docs/: checkpoint-format.md  mcp.md  style.md
examples/: 01_pipeline.yaml  01_quickstart_yaml.py  02_dynamic_planning.py  03_parallel_budget.py  04_resume_after_crash.py  05_mcp_filesystem.py  06_mcp_github.py  07_mcp_saas.py  08_learning_loop.py  09_image_generation.py  10_gpt_image_generation.py  11_vision_judge.py  README.md  _providers.py  mcp_file_server.py
examples/acquisition_diligence/: README.md  fixtures.py  run.py
examples/acquisition_diligence/expected/: graph.mmd  memo.md  trace.json
plans/: 01-bug-fixes.md  02-everything-else.md  03-openclaw-agentskills-prd.md  04-mcp-tool-support.md  05-gpt-image-benchmark.md
skills/repo-doctor/: README.md  SKILL.md
skills/repo-doctor/references/: scoring_rubric.md
skills/repo-doctor/scripts/: audit_repo.py  collect_repo_snapshot.py
smythe/: __init__.py  agent.py  async_executor.py  budget.py  checkpoint.py  constrained_planner.py  constrained_prompts.py  executor.py  executor_base.py  graph.py  loader.py  mcp.py  memory.py  openclaw_adapter.py  planner.py  prompts.py  provider.py  registry.py  router.py  skills.py  swarm.py  synthesizer.py  task.py  tools.py  tracer.py
tests/: __init__.py  helpers.py  mcp_test_server.py  test_acquisition_demo.py  test_agent.py  test_async_executor.py  test_benchmark_artifact_records.py  test_benchmarks.py  test_budget.py  test_checkpoint.py  test_constrained_planner.py  test_examples_smoke.py  test_executor.py  test_executor_base.py  test_graph.py  test_graph_export.py  test_integration.py  test_learning_loop.py  test_llm_planner.py  test_loader.py  test_mcp.py  test_memory.py  test_memory_ab.py  test_offline_provider.py  test_openclaw_adapter.py  test_planner.py  test_planner_inventory.py  test_provider.py  test_registry.py  test_repo_doctor.py  test_router.py  test_skills.py  test_skills_registry.py  test_swarm.py  test_synthesizer.py  test_task.py  test_tool_loop.py  test_tools.py  test_tracer.py
