[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smythe"
version = "0.6.0"
description = "Task-based personalized agent swarms with dynamic execution topology"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Pete Hottelet" },
]
keywords = ["agents", "swarm", "llm", "dag", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
gemini = ["google-genai>=1.0"]
openclaw = ["openclaw-sdk>=0.1"]
mcp = ["mcp>=1.2"]
all = ["smythe[anthropic]", "smythe[openai]", "smythe[gemini]", "smythe[openclaw]", "smythe[mcp]"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0", "pytest-cov>=5.0", "ruff>=0.8", "mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/petehottelet/smythe"
Repository = "https://github.com/petehottelet/smythe"
Issues = "https://github.com/petehottelet/smythe/issues"
Changelog = "https://github.com/petehottelet/smythe/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/petehottelet/smythe/security/policy"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.coverage.run]
source = ["smythe"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 100
